<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.MainActivity">

    <Button
        android:id="@+id/btn_open_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pre_loader_open_log"/>

    <Button
        android:id="@+id/btn_disable_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pre_loader_disable_log"
        />
    <Button
        android:id="@+id/btn_pre_load_inside_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pre_loader_inside_page_title"
        />
    <Button
        android:id="@+id/btn_pre_load_before_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pre_loader_before_page_title"
        />
    <Button
        android:id="@+id/btn_pre_load_before_button_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pre_loader_before_button_click"
        />
    <Button
        android:id="@+id/btn_pre_load_group_before_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pre_loader_group_before_page"
        />

</LinearLayout>